--- a/recipes/potatostew.html
+++ b/recipes/potatostew.html
@@ -25,7 +25,7 @@
     </ul>
     <h4>Instructions:</h4>
     <ol>
-        <li>Saute' onion and garlic in olive oil for <strong>5 minutes</strong>></li>
+        <li>Saute' onion and garlic in olive oil for <strong>5 minutes</strong></li>
         <li>Stir in the diced carrots and celery.</li>
         <li>Add the rest of the ingredients.</li>
         <li>Stir in broth, toss to combine and bring to the boil.</li>
